@@ -17,6 +17,7 @@
 
 package org.apache.kafka.common.message;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import org.apache.kafka.common.errors.UnsupportedVersionException;
 import org.apache.kafka.common.message.AddPartitionsToTxnRequestData.AddPartitionsToTxnTopic;
 import org.apache.kafka.common.message.AddPartitionsToTxnRequestData.AddPartitionsToTxnTopicCollection;
@@ -37,8 +38,9 @@ import org.apache.kafka.common.protocol.ApiKeys;
 import org.apache.kafka.common.protocol.ByteBufferAccessor;
 import org.apache.kafka.common.protocol.Errors;
 import org.apache.kafka.common.protocol.Message;
-import org.apache.kafka.common.protocol.types.ArrayOf;
+import org.apache.kafka.common.protocol.ObjectSerializationCache;
 import org.apache.kafka.common.protocol.types.BoundField;
+import org.apache.kafka.common.protocol.types.RawTaggedField;
 import org.apache.kafka.common.protocol.types.Schema;
 import org.apache.kafka.common.protocol.types.SchemaException;
 import org.apache.kafka.common.protocol.types.Struct;
@@ -54,6 +56,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.UUID;
 import java.util.function.Supplier;
 
 import static java.util.Collections.singletonList;
@@ -103,9 +106,9 @@ public final class MessageTest {
     @Test
     public void testDescribeAclsRequest() throws Exception {
         testAllMessageRoundTrips(new DescribeAclsRequestData().
-                setResourceType((byte) 42).
+                setResourceTypeFilter((byte) 42).
                 setResourceNameFilter(null).
-                setResourcePatternType((byte) 3).
+                setPatternTypeFilter((byte) 3).
                 setPrincipalFilter("abc").
                 setHostFilter(null).
                 setOperation((byte) 0).
@@ -249,33 +252,29 @@ public final class MessageTest {
     @Test
     public void testLeaderAndIsrVersions() throws Exception {
         // Version 3 adds two new fields - AddingReplicas and RemovingReplicas
-        LeaderAndIsrRequestData.LeaderAndIsrRequestTopicState partitionStateNoAddingRemovingReplicas =
-                new LeaderAndIsrRequestData.LeaderAndIsrRequestTopicState()
-                        .setName("topic")
-                        .setPartitionStatesV0(
-                                Collections.singletonList(
-                                        new LeaderAndIsrRequestData.LeaderAndIsrRequestPartition()
-                                                .setPartitionIndex(0)
-                                                .setReplicas(Collections.singletonList(0))
-                                )
-                        );
-        LeaderAndIsrRequestData.LeaderAndIsrRequestTopicState partitionStateWithAddingRemovingReplicas =
-                new LeaderAndIsrRequestData.LeaderAndIsrRequestTopicState()
-                        .setName("topic")
-                        .setPartitionStatesV0(
-                                Collections.singletonList(
-                                        new LeaderAndIsrRequestData.LeaderAndIsrRequestPartition()
-                                                .setPartitionIndex(0)
-                                                .setReplicas(Collections.singletonList(0))
-                                                .setAddingReplicas(Collections.singletonList(1))
-                                                .setRemovingReplicas(Collections.singletonList(1))
-                                )
-                        );
+        LeaderAndIsrRequestData.LeaderAndIsrTopicState partitionStateNoAddingRemovingReplicas =
+            new LeaderAndIsrRequestData.LeaderAndIsrTopicState()
+                .setTopicName("topic")
+                .setPartitionStates(Collections.singletonList(
+                    new LeaderAndIsrRequestData.LeaderAndIsrPartitionState()
+                        .setPartitionIndex(0)
+                        .setReplicas(Collections.singletonList(0))
+                ));
+        LeaderAndIsrRequestData.LeaderAndIsrTopicState partitionStateWithAddingRemovingReplicas =
+            new LeaderAndIsrRequestData.LeaderAndIsrTopicState()
+                .setTopicName("topic")
+                .setPartitionStates(Collections.singletonList(
+                    new LeaderAndIsrRequestData.LeaderAndIsrPartitionState()
+                        .setPartitionIndex(0)
+                        .setReplicas(Collections.singletonList(0))
+                        .setAddingReplicas(Collections.singletonList(1))
+                        .setRemovingReplicas(Collections.singletonList(1))
+                ));
         testAllMessageRoundTripsBetweenVersions(
-                (short) 2,
-                (short) 3,
-                new LeaderAndIsrRequestData().setTopicStates(Collections.singletonList(partitionStateWithAddingRemovingReplicas)),
-                new LeaderAndIsrRequestData().setTopicStates(Collections.singletonList(partitionStateNoAddingRemovingReplicas)));
+            (short) 2,
+            (short) 3,
+            new LeaderAndIsrRequestData().setTopicStates(Collections.singletonList(partitionStateWithAddingRemovingReplicas)),
+            new LeaderAndIsrRequestData().setTopicStates(Collections.singletonList(partitionStateNoAddingRemovingReplicas)));
         testAllMessageRoundTripsFromVersion((short) 3, new LeaderAndIsrRequestData().setTopicStates(Collections.singletonList(partitionStateWithAddingRemovingReplicas)));
     }
 
@@ -334,7 +333,6 @@ public final class MessageTest {
 
             if (version < 6) {
                 requestData.topics().get(0).partitions().get(0).setCommittedLeaderEpoch(-1);
-
             }
 
             if (version < 7) {
@@ -385,6 +383,9 @@ public final class MessageTest {
         String txnId = "transactionalId";
         int producerId = 25;
         short producerEpoch = 10;
+        String instanceId = "instance";
+        String memberId = "member";
+        int generationId = 1;
 
         int partition = 2;
         int offset = 100;
@@ -410,6 +411,9 @@ public final class MessageTest {
                       .setTransactionalId(txnId)
                       .setProducerId(producerId)
                       .setProducerEpoch(producerEpoch)
+                      .setGroupInstanceId(instanceId)
+                      .setMemberId(memberId)
+                      .setGenerationId(generationId)
                       .setTopics(Collections.singletonList(
                           new TxnOffsetCommitRequestTopic()
                               .setName(topicName)
@@ -423,8 +427,18 @@ public final class MessageTest {
 
         for (short version = 0; version <= ApiKeys.TXN_OFFSET_COMMIT.latestVersion(); version++) {
             TxnOffsetCommitRequestData requestData = request.get();
-            if (version < 6) {
+            if (version < 2) {
                 requestData.topics().get(0).partitions().get(0).setCommittedLeaderEpoch(-1);
+            }
+
+            if (version < 3) {
+                final short finalVersion = version;
+                assertThrows(UnsupportedVersionException.class, () -> testEquivalentMessageRoundTrip(finalVersion, requestData));
+                requestData.setGroupInstanceId(null);
+                assertThrows(UnsupportedVersionException.class, () -> testEquivalentMessageRoundTrip(finalVersion, requestData));
+                requestData.setMemberId("");
+                assertThrows(UnsupportedVersionException.class, () -> testEquivalentMessageRoundTrip(finalVersion, requestData));
+                requestData.setGenerationId(-1);
             }
 
             testAllMessageRoundTripsFromVersion(version, requestData);
@@ -454,27 +468,39 @@ public final class MessageTest {
         String groupId = "groupId";
         String topicName = "topic";
 
+        List<OffsetFetchRequestTopic> topics = Collections.singletonList(
+            new OffsetFetchRequestTopic()
+                .setName(topicName)
+                .setPartitionIndexes(Collections.singletonList(5)));
         testAllMessageRoundTrips(new OffsetFetchRequestData()
                                      .setTopics(new ArrayList<>())
                                      .setGroupId(groupId));
 
         testAllMessageRoundTrips(new OffsetFetchRequestData()
                                      .setGroupId(groupId)
-                                     .setTopics(Collections.singletonList(
-                                         new OffsetFetchRequestTopic()
-                                             .setName(topicName)
-                                             .setPartitionIndexes(Collections.singletonList(5))))
-        );
+                                     .setTopics(topics));
 
         OffsetFetchRequestData allPartitionData = new OffsetFetchRequestData()
                                                       .setGroupId(groupId)
                                                       .setTopics(null);
+
+        OffsetFetchRequestData requireStableData = new OffsetFetchRequestData()
+                                                       .setGroupId(groupId)
+                                                       .setTopics(topics)
+                                                       .setRequireStable(true);
+
         for (short version = 0; version <= ApiKeys.OFFSET_FETCH.latestVersion(); version++) {
+            final short finalVersion = version;
             if (version < 2) {
-                final short finalVersion = version;
                 assertThrows(SchemaException.class, () -> testAllMessageRoundTripsFromVersion(finalVersion, allPartitionData));
             } else {
                 testAllMessageRoundTripsFromVersion(version, allPartitionData);
+            }
+
+            if (version < 7) {
+                assertThrows(UnsupportedVersionException.class, () -> testAllMessageRoundTripsFromVersion(finalVersion, requireStableData));
+            } else {
+                testAllMessageRoundTripsFromVersion(finalVersion, requireStableData);
             }
         }
 
@@ -510,6 +536,94 @@ public final class MessageTest {
         }
     }
 
+    @Test
+    public void testProduceResponseVersions() throws Exception {
+        String topicName = "topic";
+        int partitionIndex = 0;
+        short errorCode = Errors.INVALID_TOPIC_EXCEPTION.code();
+        long baseOffset = 12L;
+        int throttleTimeMs = 1234;
+        long logAppendTimeMs = 1234L;
+        long logStartOffset = 1234L;
+        int batchIndex = 0;
+        String batchIndexErrorMessage = "error message";
+        String errorMessage = "global error message";
+
+        testAllMessageRoundTrips(new ProduceResponseData()
+                                     .setResponses(singletonList(
+                                         new ProduceResponseData.TopicProduceResponse()
+                                             .setName(topicName)
+                                             .setPartitions(singletonList(
+                                                 new ProduceResponseData.PartitionProduceResponse()
+                                                     .setPartitionIndex(partitionIndex)
+                                                     .setErrorCode(errorCode)
+                                                     .setBaseOffset(baseOffset))))));
+
+        Supplier<ProduceResponseData> response =
+            () -> new ProduceResponseData()
+                      .setResponses(singletonList(
+                            new ProduceResponseData.TopicProduceResponse()
+                                .setName(topicName)
+                                .setPartitions(singletonList(
+                                     new ProduceResponseData.PartitionProduceResponse()
+                                         .setPartitionIndex(partitionIndex)
+                                         .setErrorCode(errorCode)
+                                         .setBaseOffset(baseOffset)
+                                         .setLogAppendTimeMs(logAppendTimeMs)
+                                         .setLogStartOffset(logStartOffset)
+                                         .setRecordErrors(singletonList(
+                                             new ProduceResponseData.BatchIndexAndErrorMessage()
+                                                 .setBatchIndex(batchIndex)
+                                                 .setBatchIndexErrorMessage(batchIndexErrorMessage)))
+                                         .setErrorMessage(errorMessage)))))
+                      .setThrottleTimeMs(throttleTimeMs);
+
+        for (short version = 0; version <= ApiKeys.PRODUCE.latestVersion(); version++) {
+            ProduceResponseData responseData = response.get();
+
+            if (version < 8) {
+                responseData.responses().get(0).partitions().get(0).setRecordErrors(Collections.emptyList());
+                responseData.responses().get(0).partitions().get(0).setErrorMessage(null);
+            }
+
+            if (version < 5) {
+                responseData.responses().get(0).partitions().get(0).setLogStartOffset(-1);
+            }
+
+            if (version < 2) {
+                responseData.responses().get(0).partitions().get(0).setLogAppendTimeMs(-1);
+            }
+
+            if (version < 1) {
+                responseData.setThrottleTimeMs(0);
+            }
+
+            if (version >= 3 && version <= 4) {
+                testAllMessageRoundTripsBetweenVersions(version, (short) 4, responseData, responseData);
+            } else if (version >= 6 && version <= 7) {
+                testAllMessageRoundTripsBetweenVersions(version, (short) 7, responseData, responseData);
+            } else {
+                testEquivalentMessageRoundTrip(version, responseData);
+            }
+        }
+    }
+
+    @Test
+    public void testSimpleMessage() throws Exception {
+        final SimpleExampleMessageData message = new SimpleExampleMessageData();
+        message.setMyStruct(new SimpleExampleMessageData.MyStruct().setStructId(25).setArrayInStruct(
+            Collections.singletonList(new SimpleExampleMessageData.StructArray().setArrayFieldId(20))
+        ));
+        message.setMyTaggedStruct(new SimpleExampleMessageData.MyTaggedStruct().setStructId("abc"));
+
+        message.setProcessId(UUID.randomUUID());
+        message.setMyNullableString("notNull");
+        message.setMyInt16((short) 3);
+        message.setMyString("test string");
+
+        testAllMessageRoundTripsFromVersion((short) 2, message);
+    }
+
     private void testAllMessageRoundTrips(Message message) throws Exception {
         testAllMessageRoundTripsFromVersion(message.lowestSupportedVersion(), message);
     }
@@ -529,7 +643,7 @@ public final class MessageTest {
     }
 
     private void testAllMessageRoundTripsFromVersion(short fromVersion, Message message) throws Exception {
-        for (short version = fromVersion; version < message.highestSupportedVersion(); version++) {
+        for (short version = fromVersion; version <= message.highestSupportedVersion(); version++) {
             testEquivalentMessageRoundTrip(version, message);
         }
     }
@@ -542,27 +656,41 @@ public final class MessageTest {
     private void testEquivalentMessageRoundTrip(short version, Message message) throws Exception {
         testStructRoundTrip(version, message, message);
         testByteBufferRoundTrip(version, message, message);
+        testJsonRoundTrip(version, message, message);
     }
 
     private void testByteBufferRoundTrip(short version, Message message, Message expected) throws Exception {
-        int size = message.size(version);
+        ObjectSerializationCache cache = new ObjectSerializationCache();
+        int size = message.size(cache, version);
         ByteBuffer buf = ByteBuffer.allocate(size);
         ByteBufferAccessor byteBufferAccessor = new ByteBufferAccessor(buf);
-        message.write(byteBufferAccessor, version);
-        assertEquals(size, buf.position());
-        Message message2 = message.getClass().newInstance();
+        message.write(byteBufferAccessor, cache, version);
+        assertEquals("The result of the size function does not match the number of bytes " +
+            "written for version " + version, size, buf.position());
+        Message message2 = message.getClass().getConstructor().newInstance();
         buf.flip();
         message2.read(byteBufferAccessor, version);
-        assertEquals(size, buf.position());
-        assertEquals(expected, message2);
+        assertEquals("The result of the size function does not match the number of bytes " +
+            "read back in for version " + version, size, buf.position());
+        assertEquals("The message object created after a round trip did not match for " +
+            "version " + version, expected, message2);
         assertEquals(expected.hashCode(), message2.hashCode());
         assertEquals(expected.toString(), message2.toString());
     }
 
     private void testStructRoundTrip(short version, Message message, Message expected) throws Exception {
         Struct struct = message.toStruct(version);
-        Message message2 = message.getClass().newInstance();
+        Message message2 = message.getClass().getConstructor().newInstance();
         message2.fromStruct(struct, version);
+        assertEquals(expected, message2);
+        assertEquals(expected.hashCode(), message2.hashCode());
+        assertEquals(expected.toString(), message2.toString());
+    }
+
+    private void testJsonRoundTrip(short version, Message message, Message expected) throws Exception {
+        JsonNode jsonNode = message.toJson(version);
+        Message message2 = message.getClass().newInstance();
+        message2.fromJson(jsonNode, version);
         assertEquals(expected, message2);
         assertEquals(expected.hashCode(), message2.hashCode());
         assertEquals(expected.toString(), message2.toString());
@@ -573,7 +701,7 @@ public final class MessageTest {
      * schemas accessible through the ApiKey class.
      */
     @Test
-    public void testMessageVersions() throws Exception {
+    public void testMessageVersions() {
         for (ApiKeys apiKey : ApiKeys.values()) {
             Message message = null;
             try {
@@ -699,9 +827,9 @@ public final class MessageTest {
                     entryA, entryA.type.isNullable() ? "nullable" : "non-nullable",
                     entryB, entryB.type.isNullable() ? "nullable" : "non-nullable"));
             }
-            if (entryA.type instanceof ArrayOf) {
-                compareTypes(new NamedType(entryA.name, ((ArrayOf) entryA.type).type()),
-                             new NamedType(entryB.name, ((ArrayOf) entryB.type).type()));
+            if (entryA.type.isArray()) {
+                compareTypes(new NamedType(entryA.name, entryA.type.arrayElementType().get()),
+                             new NamedType(entryB.name, entryB.type.arrayElementType().get()));
             }
         }
     }
@@ -727,13 +855,13 @@ public final class MessageTest {
 
     @Test
     public void testDefaultValues() throws Exception {
-        verifySizeRaisesUve((short) 0, "validateOnly",
+        verifyWriteRaisesUve((short) 0, "validateOnly",
             new CreateTopicsRequestData().setValidateOnly(true));
-        verifySizeSucceeds((short) 0,
+        verifyWriteSucceeds((short) 0,
             new CreateTopicsRequestData().setValidateOnly(false));
-        verifySizeSucceeds((short) 0,
+        verifyWriteSucceeds((short) 0,
             new OffsetCommitRequestData().setRetentionTimeMs(123));
-        verifySizeRaisesUve((short) 5, "forgotten",
+        verifyWriteRaisesUve((short) 5, "forgotten",
             new FetchRequestData().setForgotten(singletonList(
                 new FetchRequestData.ForgottenTopic().setName("foo"))));
     }
@@ -741,35 +869,81 @@ public final class MessageTest {
     @Test
     public void testNonIgnorableFieldWithDefaultNull() throws Exception {
         // Test non-ignorable string field `groupInstanceId` with default null
-        verifySizeRaisesUve((short) 0, "groupInstanceId", new HeartbeatRequestData()
+        verifyWriteRaisesUve((short) 0, "groupInstanceId", new HeartbeatRequestData()
                 .setGroupId("groupId")
                 .setGenerationId(15)
                 .setMemberId(memberId)
                 .setGroupInstanceId(instanceId));
-        verifySizeSucceeds((short) 0, new HeartbeatRequestData()
+        verifyWriteSucceeds((short) 0, new HeartbeatRequestData()
                 .setGroupId("groupId")
                 .setGenerationId(15)
                 .setMemberId(memberId)
                 .setGroupInstanceId(null));
-        verifySizeSucceeds((short) 0, new HeartbeatRequestData()
+        verifyWriteSucceeds((short) 0, new HeartbeatRequestData()
                 .setGroupId("groupId")
                 .setGenerationId(15)
                 .setMemberId(memberId));
     }
 
-    private void verifySizeRaisesUve(short version, String problemFieldName,
-                                     Message message) throws Exception {
-        try {
-            message.size(version);
-            fail("Expected to see an UnsupportedVersionException when writing " +
-                message + " at version " + version);
-        } catch (UnsupportedVersionException e) {
-            assertTrue("Expected to get an error message about " + problemFieldName,
-                e.getMessage().contains(problemFieldName));
+    @Test
+    public void testWriteNullForNonNullableFieldRaisesException() throws Exception {
+        CreateTopicsRequestData createTopics = new CreateTopicsRequestData().setTopics(null);
+        for (short i = (short) 0; i <= createTopics.highestSupportedVersion(); i++) {
+            verifyWriteRaisesNpe(i, createTopics);
         }
+        MetadataRequestData metadata = new MetadataRequestData().setTopics(null);
+        verifyWriteRaisesNpe((short) 0, metadata);
     }
 
-    private void verifySizeSucceeds(short version, Message message) throws Exception {
-        message.size(version);
+    @Test
+    public void testUnknownTaggedFields() throws Exception {
+        CreateTopicsRequestData createTopics = new CreateTopicsRequestData();
+        verifyWriteSucceeds((short) 6, createTopics);
+        RawTaggedField field1000 = new RawTaggedField(1000, new byte[] {0x1, 0x2, 0x3});
+        createTopics.unknownTaggedFields().add(field1000);
+        verifyWriteRaisesUve((short) 0, "Tagged fields were set", createTopics);
+        verifyWriteSucceeds((short) 6, createTopics);
+    }
+
+    private void verifyWriteRaisesNpe(short version, Message message) throws Exception {
+        ObjectSerializationCache cache = new ObjectSerializationCache();
+        assertThrows(NullPointerException.class, () -> {
+            int size = message.size(cache, version);
+            ByteBuffer buf = ByteBuffer.allocate(size);
+            ByteBufferAccessor byteBufferAccessor = new ByteBufferAccessor(buf);
+            message.write(byteBufferAccessor, cache, version);
+        });
+    }
+
+    private void verifyWriteRaisesUve(short version,
+                                      String problemText,
+                                     Message message) throws Exception {
+        ObjectSerializationCache cache = new ObjectSerializationCache();
+        UnsupportedVersionException e =
+            assertThrows(UnsupportedVersionException.class, () -> {
+                int size = message.size(cache, version);
+                ByteBuffer buf = ByteBuffer.allocate(size);
+                ByteBufferAccessor byteBufferAccessor = new ByteBufferAccessor(buf);
+                message.write(byteBufferAccessor, cache, version);
+            });
+        assertTrue("Expected to get an error message about " + problemText +
+                ", but got: " + e.getMessage(),
+                e.getMessage().contains(problemText));
+    }
+
+    private void verifyWriteSucceeds(short version, Message message) throws Exception {
+        ObjectSerializationCache cache = new ObjectSerializationCache();
+        int size = message.size(cache, version);
+        ByteBuffer buf = ByteBuffer.allocate(size * 2);
+        ByteBufferAccessor byteBufferAccessor = new ByteBufferAccessor(buf);
+        message.write(byteBufferAccessor, cache, version);
+        ByteBuffer alt = buf.duplicate();
+        alt.flip();
+        StringBuilder bld = new StringBuilder();
+        while (alt.hasRemaining()) {
+            bld.append(String.format(" %02x", alt.get()));
+        }
+        assertEquals("Expected the serialized size to be " + size +
+            ", but it was " + buf.position(), size, buf.position());
     }
 }
